--- a/client/src/pages/pages.css
+++ b/client/src/pages/pages.css
@@ -85,3 +85,26 @@
 .redir {
     text-decoration: none;
 }
+
+.dropdown-content {
+    display: none;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+    text-align: left;
+    font-family: system-ui;
+    font-weight: 500;
+  }
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+    background-color: rgba(66, 246, 11, 0.381);
+  }
+
+  .dropdown {
+    margin-top: 40px;
+    font-size: larger;
+    font-weight: 700;
+  }
